{
  "yourGoogleAccount": "Sua conta Google",
  "yourFacebookAccount": "Sua conta Facebook",
  "exampleEmail": "exemplo@email.com",
  "email": "E-mail",
  "obscurePassword": "***********",
  "password": "Senha",
  "rememberPassword": "Lembrar senha",
  "forgotPassword": "Esqueci minha senha",
  "signIn": "Fazer Login",
  "orEnterUsing": "  Ou entre usando  ",
  "meditateWithoutLogin": "Meditar sem Login",
  "createOne": "Criar uma ",
  "account": "conta",
  "invalidEmail": "E-mail inválido",
  "name": "Nome",
  "confirmPassword": "Confirmar Senha",
  "createAccount": "Criar Conta",
  "requiredField": "Campo obrigatório",
  "passwordsDontMatch": "Senhas não conferem",
  "invalidParameters": "Parâmetros inválidos",
  "accountCreatedSuccessfully": "Conta criada com Sucesso!",
  "completeYourRegistration": "Complete seu cadastro",
  "haveAccessContent": " e tenha acesso a todos os conteúdos.",
  "startMeditating": "Comece a Meditar",
  "welcomeTitle": "O 5 minutos Eu Medito continua",
  "welcomeSubtitle": "100% gratuito",
  "welcomeMessage": "Faça login para conferir as novidades!",
  "enter": "Entrar"
}